--- a/backend-new/package.json
+++ b/backend-new/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "build": "node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
