--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.1.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router": "^6.26.2",
