--- a/web/package.json
+++ b/web/package.json
@@ -21,13 +21,16 @@
     "react-icons": "^5.3.0",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.8.0",
